examples/test/testpolicy19594.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19594
  namespace: namespace421
spec:
  podSelector:
    matchLabels:
      key30: value4
      key15: value7
      key25: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value28
          key11: value22
          key36: value14
      podSelector:
        matchLabels:
          key34: value33
